fix letter spacing on mobile

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,7 +2,7 @@ h1 {
   font-family: "Fjalla One", sans-serif;
   font-size: 3em;
   font-weight: bolder;
-  letter-spacing: 0.3em;
+  letter-spacing: 0.1em;
   margin: 0;
   text-transform: uppercase;
 }
@@ -19,5 +19,6 @@ a:hover {
 @media (min-width: 768px) {
   h1 {
     font-size: 5em;
+    letter-spacing: 0.3em;
   }
 }
